web-hook/chart/templates/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: web-hook
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: web-hook
    spec:
      containers:
      - name: web-hook
        image:  aidbox/zero-ci-hook:0.0.1
        ports:
        - containerPort: 80
