web-hook/chart/templates/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-hook
spec:
  ports:
  - port: 443
    targetPort: 443
    protocol: TCP
    name: https
  selector:
    app: web-hook
